--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.9.1",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "razorpay": "^2.9.2"
   },
