--- a/example.env
+++ b/example.env
@@ -1,4 +1,8 @@
 KEY_ID="<Your KEY ID>"
 KEY_SECRET="<Your KEY SECRET>"
-
-DATABASE_URL="postgresql://<username>:<password>@<hostname>:<port>/<db_name>?schema=public"
+## If your Redis DB is at localhost you don't need to to user "rediss://<username>:<Password>@<host>:<port>" you can use "redis://<username>:<Password>@<host>:<port>"
+REDIS_URL="rediss://<username>:<Password>@<host>:<port>"
+REDIS_QUEUE="<Queue Name>"
+REACT_APP_BASEURL=<C2M API Base URL>
+REACT_APP_C2MUSER=<C2M Username>
+REACT_APP_C2MPASSWORD=<C2M Password>
