--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
+    "buffer": "^6.0.3",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "https": "^1.0.0",
+    "ioredis": "^5.3.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "redis": "^4.6.13"
   },
   "devDependencies": {
     "prisma": "^5.9.1"
