--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 KEY_ID="<Your KEY ID>"
 KEY_SECRET="<Your KEY SECRET>"
-## If your Redis DB is at localhost you don't need to to user "rediss://<username>:<Password>@<host>:<port>" you can use "redis://<username>:<Password>@<host>:<port>"
+## If your Redis DB is at localhost or running on non "https" server/service you don't need to to use "rediss://<username>:<Password>@<host>:<port>" you can use "redis://<username>:<Password>@<host>:<port>"
 REDIS_URL="rediss://<username>:<Password>@<host>:<port>"
 REDIS_QUEUE="<Queue Name>"
 REACT_APP_BASEURL=<C2M API Base URL>
