--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "https": "^1.0.0",
